--- a/sellform.html
+++ b/sellform.html
@@ -140,11 +140,11 @@
                 
                         <label for="category">Category:</label>
                         <select class="inputstyle box" id="category" name="category" required>
-                            <option value="category1">Mobile Phones</option>
-                            <option value="category2">Electronics Appliances</option>
-                            <option value="category3">Bikes and Car</option>
-                            <option value="category4">Furnitures</option>
-                            <option value="category4">Books games and hobbies</option>
+                            <option value="Mobile Phones">Mobile Phones</option>
+                            <option value="Electronics Appliances">Electronics Appliances</option>
+                            <option value="Bikes and Car">Bikes and Car</option>
+                            <option value="Furnitures">Furnitures</option>
+                            <option value="Books games and hobbies">Books games and hobbies</option>
                         </select><br><br>
                 
                         <label for="condition">Physical Condition:</label>
