--- a/sellform.html
+++ b/sellform.html
@@ -174,7 +174,7 @@
                          <!-- <img src ="./public/users/"> -->
                         
 
-                         <label for="sellRent">Sell/Rent:</label>
+                         <label for="sellRent">Sell/Rent/Donate:</label>
                         <select class="box" id="sellRent" name="sellorrent" value="sell" required>
                           <option value="Sell">Sell</option>
                             <option value="Rent">Rent</option>
