--- a/sellform.html
+++ b/sellform.html
@@ -174,11 +174,12 @@
                          <!-- <img src ="./public/users/"> -->
                         
 
-                         <label for="sellRent">Sell/Rent/Donate:</label>
+                         <label for="sellRent">Sell/Rent/Donate/Demand:</label>
                         <select class="box" id="sellRent" name="sellorrent" value="sell" required>
                           <option value="Sell">Sell</option>
                             <option value="Rent">Rent</option>
                             <option value="Donate">Donate</option>
+                            <option value="Demand">Demand</option>
                         </select>
                         <br><br>
                 <!-- <div style="position: relative;top:-100px;"> -->
